Resolutions bugs on mobile

--- a/app/scss/components/_noui-slider.scss
+++ b/app/scss/components/_noui-slider.scss
@@ -42,6 +42,7 @@
 }
 .noUi-origin {
   background-color: #d3d3d3;
+  border-radius: 0;
 }
 .slider-tooltip {
   position: absolute;
