--- a/app/scss/steps/_6-scenarios.scss
+++ b/app/scss/steps/_6-scenarios.scss
@@ -10,6 +10,10 @@
   .scenario {
     margin: 0 auto;
     width: 80%;
+
+    @media (max-width: $screen-tablet) {
+      width: 100%;
+    }
   }
 
   .option--income {
